deploy: LucasZhu97/lucasZhuGitHubAction@192fb6b0eab23839c018ed6e89fc031a9a9a6a6f

--- a/recent/index.html
+++ b/recent/index.html
@@ -9,8 +9,7 @@
 <meta name=description content="Lucas Zhu's Homepage.">
 <title>
 recent - Lucas Zhu
-</title>
-<link href=/recent/index.xml rel=alternate type=application/rss+xml title="Lucas Zhu">
+</title><link href=/recent/index.xml rel=alternate type=application/rss+xml title="Lucas Zhu">
 <link rel="shortcut icon" href=/custom.png>
 <link rel=stylesheet href=/css/main.min.85360bd86e2826e30f51b9d81488caf2b4fb6469ad365610e1a33395462e1f98.css integrity="sha256-hTYL2G4oJuMPUbnYFIjK8rT7ZGmtNlYQ4aMzlUYuH5g=" crossorigin=anonymous media=screen>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Didact+Gothic">
@@ -24,44 +23,33 @@ recent - Lucas Zhu
 <meta property="og:url" content="https://lucaszhu97.github.io/recent/"><meta property="og:image" content="https://lucaszhu97.github.io/tn.png"><meta property="og:site_name" content="Lucas Zhu">
 <title>
 recent
-</title>
-</head>
-<body>
+</title></head><body>
 <header class="wrap flex-container">
-<h1>recent</h1>
-</header>
-<main class=wrap>
+<h1>recent</h1></header><main class=wrap>
 <article class=flex-container>
-</article>
-<nav role=navigation>
+</article><nav role=navigation>
 <ul>
 <li>
 Tue Feb 15, 2022 --
 <a href=/recent/annoucement_4/>
 One co-authored paper accepted by VLDB 22.
 </a>
-</li>
-<li>
+</li><li>
 Sun Jan 09, 2022 --
 <a href=/recent/annoucement_3/>
 Break up.
 </a>
-</li>
-<li>
+</li><li>
 Tue Nov 09, 2021 --
 <a href=/recent/annoucement_1/>
 I&rsquo;ll be joining Amazon Web Services as a Software Development Engineer Intern next summer.
 </a>
-</li>
-<li>
+</li><li>
 Sun May 09, 2021 --
 <a href=/recent/annoucement_2/>
 I&rsquo;m now officially a graduate of The Ohio State University, Class 2021.
 </a>
-</li>
-</ul>
-</nav>
-<nav role=navigation class="flex-container bottom-menu">
+</li></ul></nav><nav role=navigation class="flex-container bottom-menu">
 <hr>
 <p>
 <a href=/about>about</a>
@@ -75,10 +63,5 @@ I&rsquo;m now officially a graduate of The Ohio State University, Class 2021.
 <a href=/>
 main
 </a>
-</p>
-</nav>
-</main>
-<footer class="flex-container footer">
-</footer>
-</body>
-</html>
+</p></nav></main><footer class="flex-container footer">
+</footer></body></html>
