--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<meta name=generator content="Hugo 0.92.2">
+<meta name=generator content="Hugo 0.93.2">
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="chrome=1">
 <meta name=HandheldFriendly content="True">
@@ -10,8 +10,7 @@
 <meta name=description content="Lucas Zhu's Homepage.">
 <title>
 Lucas Zhu
-</title>
-<link href=/index.xml rel=alternate type=application/rss+xml title="Lucas Zhu">
+</title><link href=/index.xml rel=alternate type=application/rss+xml title="Lucas Zhu">
 <link rel="shortcut icon" href=/custom.png>
 <link rel=stylesheet href=/css/main.min.85360bd86e2826e30f51b9d81488caf2b4fb6469ad365610e1a33395462e1f98.css integrity="sha256-hTYL2G4oJuMPUbnYFIjK8rT7ZGmtNlYQ4aMzlUYuH5g=" crossorigin=anonymous media=screen>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Didact+Gothic">
@@ -23,9 +22,7 @@ Lucas Zhu
 <meta property="og:description" content="Lucas Zhu's Homepage.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://lucaszhu97.github.io/"><meta property="og:image" content="https://lucaszhu97.github.io/tn.png"><meta property="og:site_name" content="Lucas Zhu">
-<title>Lucas Zhu</title>
-</head>
-<body>
+<title>Lucas Zhu</title></head><body>
 <nav role=navigation class=flex-container id=splash>
 <a href=about class=big-link>
 about
@@ -39,6 +36,4 @@ post
 <a href=gallery class=big-link>
 gallery
 </a>
-</nav>
-</body>
-</html>
+</nav></body></html>
