--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
 <meta name=description content="Lucas Zhu's Homepage.">
 <title>
 about - Lucas Zhu
-</title><link rel="shortcut icon" href=/custom.png>
+</title><link rel="shortcut icon" href=/ukraine-2.png>
 <link rel=stylesheet href=/css/main.min.85360bd86e2826e30f51b9d81488caf2b4fb6469ad365610e1a33395462e1f98.css integrity="sha256-hTYL2G4oJuMPUbnYFIjK8rT7ZGmtNlYQ4aMzlUYuH5g=" crossorigin=anonymous media=screen>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Didact+Gothic">
 <meta name=twitter:card content="summary_large_image">
