--- a/gallery/index.html
+++ b/gallery/index.html
@@ -10,7 +10,7 @@
 <title>
 Under Construction - Lucas Zhu
 </title><link href=/gallery/index.xml rel=alternate type=application/rss+xml title="Lucas Zhu">
-<link rel="shortcut icon" href=/custom.png>
+<link rel="shortcut icon" href=/ukraine-2.png>
 <link rel=stylesheet href=/css/main.min.85360bd86e2826e30f51b9d81488caf2b4fb6469ad365610e1a33395462e1f98.css integrity="sha256-hTYL2G4oJuMPUbnYFIjK8rT7ZGmtNlYQ4aMzlUYuH5g=" crossorigin=anonymous media=screen>
 <link rel=stylesheet href=https://lucaszhu97.github.io/css/photoswipe.css>
 <link rel=stylesheet href=https://lucaszhu97.github.io/css/default-skin.css>
@@ -31,20 +31,20 @@ Under Construction
 <article role=article class=flex-container>
 <p>Insert some dog pictures here. Dog, Dog, All Dogs.</p></article><div class=grid>
 <div>
-<a href=/gallery/1_shibainu.jpeg data-size=1136x852>
-<img src=/gallery/1_shibainu_hu4924350c09d664cf70278ffce9bad3fc_83114_800x0_resize_q75_box.jpeg alt=1_shibainu.jpeg data-index=0>
+<a href=/gallery/4_husky.png data-size=700x525>
+<img src=/gallery/4_husky_hu565f33c282dff81cd5081c81b8163928_315936_800x0_resize_box_3.png alt=4_husky.png data-index=0>
 </a>
 </div><div>
-<a href=/gallery/2_gorci.png data-size=1920x1080>
-<img src=/gallery/2_gorci_hu359e108c1a9635e0c1a3edbfa5c1d006_2740123_800x0_resize_box_3.png alt=2_gorci.png data-index=1>
+<a href=/gallery/1_shibainu.jpeg data-size=1136x852>
+<img src=/gallery/1_shibainu_hu4924350c09d664cf70278ffce9bad3fc_83114_800x0_resize_q75_box.jpeg alt=1_shibainu.jpeg data-index=1>
 </a>
 </div><div>
 <a href=/gallery/3_golenretriever.png data-size=700x400>
 <img src=/gallery/3_golenretriever_hu7907822449a236f065c45b37b1dcc564_346706_800x0_resize_box_3.png alt=3_golenretriever.png data-index=2>
 </a>
 </div><div>
-<a href=/gallery/4_husky.png data-size=700x525>
-<img src=/gallery/4_husky_hu565f33c282dff81cd5081c81b8163928_315936_800x0_resize_box_3.png alt=4_husky.png data-index=3>
+<a href=/gallery/2_gorci.png data-size=1920x1080>
+<img src=/gallery/2_gorci_hu359e108c1a9635e0c1a3edbfa5c1d006_2740123_800x0_resize_box_3.png alt=2_gorci.png data-index=3>
 </a>
 </div></div><div class=pswp tabindex=-1 role=dialog aria-hidden=true>
 <div class=pswp__bg></div><div class=pswp__scroll-wrap>
