deploy: LucasZhu97/lucasZhuGitHubAction@2e709f6dff6e93a5493e34840d3e2d20942f5d65

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,76 +1,10 @@
-<!doctype html><html>
-<head>
-<meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="chrome=1">
-<meta name=HandheldFriendly content="True">
-<meta name=MobileOptimized content="320">
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=referrer content="no-referrer">
-<meta name=description content="Lucas Zhu's Homepage.">
-<title>
-Under Construction - Lucas Zhu
-</title><link href=/gallery/index.xml rel=alternate type=application/rss+xml title="Lucas Zhu">
-<link rel="shortcut icon" href=/ukraine-2.png>
-<link rel=stylesheet href=/css/main.min.85360bd86e2826e30f51b9d81488caf2b4fb6469ad365610e1a33395462e1f98.css integrity="sha256-hTYL2G4oJuMPUbnYFIjK8rT7ZGmtNlYQ4aMzlUYuH5g=" crossorigin=anonymous media=screen>
-<link rel=stylesheet href=https://lucaszhu97.github.io/css/photoswipe.css>
-<link rel=stylesheet href=https://lucaszhu97.github.io/css/default-skin.css>
-<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Didact+Gothic">
-<meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://lucaszhu97.github.io/tn.png">
-<meta name=twitter:title content="Under Construction">
-<meta name=twitter:description content="Lucas Zhu's Homepage.">
-<meta property="og:title" content="Under Construction">
-<meta property="og:description" content="Lucas Zhu's Homepage.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://lucaszhu97.github.io/gallery/"><meta property="og:image" content="https://lucaszhu97.github.io/tn.png"><meta property="og:site_name" content="Lucas Zhu">
-<title>
-Under Construction
-</title></head><body>
-<header class="wrap flex-container">
-<h1>Under Construction</h1></header><main class=wrap>
-<article role=article class=flex-container>
-<p>Insert some dog pictures here. Dog, Dog, All Dogs.</p></article><div class=grid>
-<div>
-<a href=/gallery/3_golenretriever.png data-size=700x400>
-<img src=/gallery/3_golenretriever_hu7907822449a236f065c45b37b1dcc564_346706_800x0_resize_box_3.png alt=3_golenretriever.png data-index=0>
-</a>
-</div><div>
-<a href=/gallery/1_shibainu.jpeg data-size=1136x852>
-<img src=/gallery/1_shibainu_hu4924350c09d664cf70278ffce9bad3fc_83114_800x0_resize_q75_box.jpeg alt=1_shibainu.jpeg data-index=1>
-</a>
-</div><div>
-<a href=/gallery/4_husky.png data-size=700x525>
-<img src=/gallery/4_husky_hu565f33c282dff81cd5081c81b8163928_315936_800x0_resize_box_3.png alt=4_husky.png data-index=2>
-</a>
-</div><div>
-<a href=/gallery/2_gorci.png data-size=1920x1080>
-<img src=/gallery/2_gorci_hu359e108c1a9635e0c1a3edbfa5c1d006_2740123_800x0_resize_box_3.png alt=2_gorci.png data-index=3>
-</a>
-</div></div><div class=pswp tabindex=-1 role=dialog aria-hidden=true>
-<div class=pswp__bg></div><div class=pswp__scroll-wrap>
-<div class=pswp__container>
-<div class=pswp__item></div><div class=pswp__item></div><div class=pswp__item></div></div><div class="pswp__ui pswp__ui--hidden">
-<div class=pswp__top-bar>
-<div class=pswp__counter></div><button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+<!doctype html><html><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="chrome=1"><meta name=HandheldFriendly content="True"><meta name=MobileOptimized content="320"><meta name=viewport content="width=device-width,initial-scale=1"><meta name=referrer content="no-referrer"><meta name=description content="Lucas Zhu's Homepage."><title>Under Construction - Lucas Zhu</title><link href=/gallery/index.xml rel=alternate type=application/rss+xml title="Lucas Zhu"><link rel="shortcut icon" href=/ukraine-2.png><link rel=stylesheet href=/css/main.min.85360bd86e2826e30f51b9d81488caf2b4fb6469ad365610e1a33395462e1f98.css integrity="sha256-hTYL2G4oJuMPUbnYFIjK8rT7ZGmtNlYQ4aMzlUYuH5g=" crossorigin=anonymous media=screen><link rel=stylesheet href=https://lucaszhu97.github.io/css/photoswipe.css><link rel=stylesheet href=https://lucaszhu97.github.io/css/default-skin.css><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Didact+Gothic"><meta name=twitter:card content="summary_large_image"><meta name=twitter:image content="https://lucaszhu97.github.io/tn.png"><meta name=twitter:title content="Under Construction"><meta name=twitter:description content="Lucas Zhu's Homepage."><meta property="og:title" content="Under Construction"><meta property="og:description" content="Lucas Zhu's Homepage."><meta property="og:type" content="website"><meta property="og:url" content="https://lucaszhu97.github.io/gallery/"><meta property="og:image" content="https://lucaszhu97.github.io/tn.png"><meta property="og:site_name" content="Lucas Zhu"><title>Under Construction</title></head><body><header class="wrap flex-container"><h1>Under Construction</h1></header><main class=wrap><article role=article class=flex-container><p>Insert some dog pictures here. Dog, Dog, All Dogs.</p></article><div class=grid><div><a href=/gallery/3_golenretriever.png data-size=700x400><img src=/gallery/3_golenretriever_hu7907822449a236f065c45b37b1dcc564_346706_800x0_resize_box_3.png alt=3_golenretriever.png data-index=0></a></div><div><a href=/gallery/4_husky.png data-size=700x525><img src=/gallery/4_husky_hu565f33c282dff81cd5081c81b8163928_315936_800x0_resize_box_3.png alt=4_husky.png data-index=1></a></div><div><a href=/gallery/1_shibainu.jpeg data-size=1136x852><img src=/gallery/1_shibainu_hu4924350c09d664cf70278ffce9bad3fc_83114_800x0_resize_q75_box.jpeg alt=1_shibainu.jpeg data-index=2></a></div><div><a href=/gallery/2_gorci.png data-size=1920x1080><img src=/gallery/2_gorci_hu359e108c1a9635e0c1a3edbfa5c1d006_2740123_800x0_resize_box_3.png alt=2_gorci.png data-index=3></a></div></div><div class=pswp tabindex=-1 role=dialog aria-hidden=true><div class=pswp__bg></div><div class=pswp__scroll-wrap><div class=pswp__container><div class=pswp__item></div><div class=pswp__item></div><div class=pswp__item></div></div><div class="pswp__ui pswp__ui--hidden"><div class=pswp__top-bar><div class=pswp__counter></div><button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
 <button class="pswp__button pswp__button--share" title=Share></button>
 <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-<button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
-<div class=pswp__preloader>
-<div class=pswp__preloader__icn>
-<div class=pswp__preloader__cut>
-<div class=pswp__preloader__donut></div></div></div></div></div><div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-<div class=pswp__share-tooltip></div></div><button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-</button>
-<button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-</button>
-<div class=pswp__caption>
-<div class=pswp__caption__center></div></div></div></div></div><script src=https://lucaszhu97.github.io/js/photoswipe.min.js></script>
+<button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button><div class=pswp__preloader><div class=pswp__preloader__icn><div class=pswp__preloader__cut><div class=pswp__preloader__donut></div></div></div></div></div><div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap"><div class=pswp__share-tooltip></div></div><button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)"></button>
+<button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)"></button><div class=pswp__caption><div class=pswp__caption__center></div></div></div></div></div><script src=https://lucaszhu97.github.io/js/photoswipe.min.js></script>
 <script src=https://lucaszhu97.github.io/js/photoswipe-ui-default.min.js></script>
-<script src=https://lucaszhu97.github.io/js/gallery.min.js></script>
-<nav role=navigation class="flex-container bottom-menu">
-<hr>
-<p>
-<a href=/about>about</a>
+<script src=https://lucaszhu97.github.io/js/gallery.min.js></script><nav role=navigation class="flex-container bottom-menu"><hr><p><a href=/about>about</a>
 &#183;
 <a href=/recent>recent</a>
 &#183;
@@ -78,8 +12,4 @@ Under Construction
 &#183;
 <a href=/gallery>gallery</a>
 &#183;
-<a href=/>
-main
-</a>
-</p></nav></main><footer class="flex-container footer">
-</footer></body></html>
+<a href=/>main</a></p></nav></main><footer class="flex-container footer"></footer></body></html>
