--- a/recent/index.html
+++ b/recent/index.html
@@ -1,58 +1,8 @@
-<!doctype html><html>
-<head>
-<meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="chrome=1">
-<meta name=HandheldFriendly content="True">
-<meta name=MobileOptimized content="320">
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=referrer content="no-referrer">
-<meta name=description content="Lucas Zhu's Homepage.">
-<title>
-recent - Lucas Zhu
-</title><link href=/recent/index.xml rel=alternate type=application/rss+xml title="Lucas Zhu">
-<link rel="shortcut icon" href=/ukraine-2.png>
-<link rel=stylesheet href=/css/main.min.85360bd86e2826e30f51b9d81488caf2b4fb6469ad365610e1a33395462e1f98.css integrity="sha256-hTYL2G4oJuMPUbnYFIjK8rT7ZGmtNlYQ4aMzlUYuH5g=" crossorigin=anonymous media=screen>
-<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Didact+Gothic">
-<meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://lucaszhu97.github.io/tn.png">
-<meta name=twitter:title content="recent">
-<meta name=twitter:description content="Lucas Zhu's Homepage.">
-<meta property="og:title" content="recent">
-<meta property="og:description" content="Lucas Zhu's Homepage.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://lucaszhu97.github.io/recent/"><meta property="og:image" content="https://lucaszhu97.github.io/tn.png"><meta property="og:site_name" content="Lucas Zhu">
-<title>
-recent
-</title></head><body>
-<header class="wrap flex-container">
-<h1>recent</h1></header><main class=wrap>
-<article class=flex-container>
-</article><nav role=navigation>
-<ul>
-<li>
-Tue Feb 15, 2022 --
-<a href=/recent/annoucement_4/>
-One co-authored paper accepted by VLDB 22.
-</a>
-</li><li>
-Sun Jan 09, 2022 --
-<a href=/recent/annoucement_3/>
-Break up.
-</a>
-</li><li>
-Tue Nov 09, 2021 --
-<a href=/recent/annoucement_1/>
-I&rsquo;ll be joining Amazon Web Services as a Software Development Engineer Intern next summer.
-</a>
-</li><li>
-Sun May 09, 2021 --
-<a href=/recent/annoucement_2/>
-I&rsquo;m now officially a graduate of The Ohio State University, Class 2021.
-</a>
-</li></ul></nav><nav role=navigation class="flex-container bottom-menu">
-<hr>
-<p>
-<a href=/about>about</a>
+<!doctype html><html><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="chrome=1"><meta name=HandheldFriendly content="True"><meta name=MobileOptimized content="320"><meta name=viewport content="width=device-width,initial-scale=1"><meta name=referrer content="no-referrer"><meta name=description content="Lucas Zhu's Homepage."><title>recent - Lucas Zhu</title><link href=/recent/index.xml rel=alternate type=application/rss+xml title="Lucas Zhu"><link rel="shortcut icon" href=/ukraine-2.png><link rel=stylesheet href=/css/main.min.85360bd86e2826e30f51b9d81488caf2b4fb6469ad365610e1a33395462e1f98.css integrity="sha256-hTYL2G4oJuMPUbnYFIjK8rT7ZGmtNlYQ4aMzlUYuH5g=" crossorigin=anonymous media=screen><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Didact+Gothic"><meta name=twitter:card content="summary_large_image"><meta name=twitter:image content="https://lucaszhu97.github.io/tn.png"><meta name=twitter:title content="recent"><meta name=twitter:description content="Lucas Zhu's Homepage."><meta property="og:title" content="recent"><meta property="og:description" content="Lucas Zhu's Homepage."><meta property="og:type" content="website"><meta property="og:url" content="https://lucaszhu97.github.io/recent/"><meta property="og:image" content="https://lucaszhu97.github.io/tn.png"><meta property="og:site_name" content="Lucas Zhu"><title>recent</title></head><body><header class="wrap flex-container"><h1>recent</h1></header><main class=wrap><article class=flex-container></article><nav role=navigation><ul><li>Tue Feb 15, 2022 --
+<a href=/recent/annoucement_4/>One co-authored paper accepted by VLDB 22.</a></li><li>Sun Jan 09, 2022 --
+<a href=/recent/annoucement_3/>Break up.</a></li><li>Tue Nov 09, 2021 --
+<a href=/recent/annoucement_1/>I&rsquo;ll be joining Amazon Web Services as a Software Development Engineer Intern next summer.</a></li><li>Sun May 09, 2021 --
+<a href=/recent/annoucement_2/>I&rsquo;m now officially a graduate of The Ohio State University, Class 2021.</a></li></ul></nav><nav role=navigation class="flex-container bottom-menu"><hr><p><a href=/about>about</a>
 &#183;
 <a href=/recent>recent</a>
 &#183;
@@ -60,8 +10,4 @@ I&rsquo;m now officially a graduate of The Ohio State University, Class 2021.
 &#183;
 <a href=/gallery>gallery</a>
 &#183;
-<a href=/>
-main
-</a>
-</p></nav></main><footer class="flex-container footer">
-</footer></body></html>
+<a href=/>main</a></p></nav></main><footer class="flex-container footer"></footer></body></html>
